--- a/notes.html
+++ b/notes.html
@@ -25,7 +25,7 @@
     <img class="bg-secondary" src="assets/html-5.png" alt="">
 </div>
   <div class="col ">
-     <h1 class="text-white l">HTML</h1>
+     <h1 class="text-white fw-bolderg">HTML</h1>
     <h4 class="text-white">Hypertext Markup Language</h4>
   </div>
     <div class="col">
@@ -43,8 +43,8 @@
       <img src="assets/css-3.png" alt="">
     </div>
      <div class="col">
-     <h1 class="text-white">CSS</h1>
-    <h4 class="text-white">Cascading Style Sheet</h4>
+     <h1 class="text-white fw-bolder">CSS</h1>
+    <h4 class="text-white sm-2">Cascading Style Sheet</h4>
   </div>
     <div class="col">
      <h5 class="text-white">Stylise the website</h5>
@@ -61,7 +61,7 @@
       <img src="assets/java-script.png" alt="">
     </div>
      <div class="col">
-     <h1 class="text-white">Javascript</h1>
+     <h1 class="text-white fw-bolder">Javascript</h1>
 
   </div>
     <div class="col">
